{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 279,
  "lineage": "9aa0b3b4-56ec-2697-9f6c-fef97761c635",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kafka_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e35ddab05955cf57",
            "arn": "arn:aws:ec2:ap-south-1:323155100510:instance/i-0121a0d0a17806ce2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "data-engineering-project-role",
            "id": "i-0121a0d0a17806ce2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "knveyrtest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04627230547e86dd0",
            "private_dns": "ip-10-0-1-11.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-13-233-64-234.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.64.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0862cb425914cee44",
                "volume_size": 32,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c7309237a3be1b2",
            "tags": {
              "Name": "kafka-server"
            },
            "tags_all": {
              "Name": "kafka-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d58fb9cccea4d42"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.data_engineering_project_role",
            "aws_iam_role.data_engineering_project_role",
            "aws_security_group.emr_master",
            "aws_security_group.emr_slave",
            "aws_security_group.kafka_sg",
            "aws_subnet.subnet_1",
            "aws_vpc.streaming_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:323155100510:internet-gateway/igw-072397aa87062c6e5",
            "id": "igw-072397aa87062c6e5",
            "owner_id": "323155100510",
            "tags": {
              "Name": "streaming-demo-igw"
            },
            "tags_all": {
              "Name": "streaming-demo-igw"
            },
            "vpc_id": "vpc-0b9afa3a08d6ee440"
          },
          "dependencies": [
            "aws_vpc.streaming_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:323155100510:route-table/rtb-0373db9c2ab7aaccc",
            "id": "rtb-0373db9c2ab7aaccc",
            "owner_id": "323155100510",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-072397aa87062c6e5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "streaming-demo-public-rt"
            },
            "tags_all": {
              "Name": "streaming-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9afa3a08d6ee440"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.streaming_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ad35b21b7a13db1",
            "route_table_id": "rtb-0373db9c2ab7aaccc",
            "subnet_id": "subnet-00c7309237a3be1b2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.subnet_1",
            "aws_vpc.streaming_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d638c319b3b418ce",
            "route_table_id": "rtb-0373db9c2ab7aaccc",
            "subnet_id": "subnet-0df60e39310b67832"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.subnet_2",
            "aws_vpc.streaming_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:323155100510:security-group/sg-0035e45d418d6113e",
            "description": "Security group for EMR master",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0035e45d418d6113e",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.36.222.102/32"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "49.36.222.102/32"
                ],
                "description": null,
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "EMR-Master-SecurityGroup",
            "name_prefix": "",
            "owner_id": "323155100510",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EMR-Master-SecurityGroup"
            },
            "tags_all": {
              "Name": "EMR-Master-SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9afa3a08d6ee440"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.streaming_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:323155100510:security-group/sg-0730120416de9f2d9",
            "description": "Security group for EMR slave",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0730120416de9f2d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.36.222.102/32"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "EMR-Slave-SecurityGroup",
            "name_prefix": "",
            "owner_id": "323155100510",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EMR-Slave-SecurityGroup"
            },
            "tags_all": {
              "Name": "EMR-Slave-SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9afa3a08d6ee440"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.streaming_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:323155100510:security-group/sg-04d58fb9cccea4d42",
            "description": "Security group for Kafka server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d58fb9cccea4d42",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.36.222.102/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "49.36.222.102/32"
                ],
                "description": "Kafka UI port",
                "from_port": 9021,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9021
              },
              {
                "cidr_blocks": [
                  "49.36.222.102/32"
                ],
                "description": "Kafka port",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              },
              {
                "cidr_blocks": [],
                "description": "Kafka access from EMR nodes",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0035e45d418d6113e",
                  "sg-0730120416de9f2d9"
                ],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "kafka-security-group",
            "name_prefix": "",
            "owner_id": "323155100510",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka-security-group"
            },
            "tags_all": {
              "Name": "kafka-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9afa3a08d6ee440"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.emr_master",
            "aws_security_group.emr_slave",
            "aws_vpc.streaming_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:323155100510:subnet/subnet-00c7309237a3be1b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c7309237a3be1b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323155100510",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "streaming-demo-subnet-1"
            },
            "tags_all": {
              "Name": "streaming-demo-subnet-1"
            },
            "vpc_id": "vpc-0b9afa3a08d6ee440"
          },
          "dependencies": [
            "aws_vpc.streaming_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:323155100510:subnet/subnet-0df60e39310b67832",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df60e39310b67832",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323155100510",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "streaming-demo-subnet-2"
            },
            "tags_all": {
              "Name": "streaming-demo-subnet-2"
            },
            "vpc_id": "vpc-0b9afa3a08d6ee440"
          },
          "dependencies": [
            "aws_vpc.streaming_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "streaming_demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:323155100510:vpc/vpc-0b9afa3a08d6ee440",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad085633c9616a10",
            "default_route_table_id": "rtb-085d79d58c3f980a0",
            "default_security_group_id": "sg-0079adcd0cb7995a7",
            "dhcp_options_id": "dopt-04f2ffc0140f578bc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b9afa3a08d6ee440",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085d79d58c3f980a0",
            "owner_id": "323155100510",
            "tags": {
              "Name": "streaming-demo-vpc"
            },
            "tags_all": {
              "Name": "streaming-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}